[gd_scene load_steps=5 format=3 uid="uid://dtrl7eedwg71m"]

[ext_resource type="Script" path="res://assets/sprites/caozuo_1.gd" id="1_b42n5"]

[sub_resource type="Animation" id="Animation_5mkva"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:theme_override_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_8y2od"]
resource_name = "caozuo!"
step = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:theme_override_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.031, 0.986, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0.203922, 0.827451, 0.423529, 1), Color(0.203922, 0.827451, 0.423529, 1), Color(0.203922, 0.827451, 0.423529, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_n4epp"]
_data = {
"RESET": SubResource("Animation_5mkva"),
"caozuo!": SubResource("Animation_8y2od")
}

[node name="caozuo1" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_b42n5")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 506.0
offset_top = 281.0
offset_right = 578.0
offset_bottom = 488.0

[node name="jian" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "键鼠操作"

[node name="shou" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "手势操作"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 329.0
offset_top = 82.0
offset_right = 779.0
offset_bottom = 145.0
theme_override_font_sizes/font_size = 45
text = "请设置您喜欢的操作！"

[node name="Timer" type="Timer" parent="."]

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 469.0
offset_top = 195.0
offset_right = 669.0
offset_bottom = 250.0
theme_override_colors/font_color = Color(0, 0, 0, 0)
theme_override_font_sizes/font_size = 40
text = "修改成功！"

[node name="AnimationPlayer" type="AnimationPlayer" parent="Label2"]
libraries = {
"": SubResource("AnimationLibrary_n4epp")
}

[connection signal="pressed" from="VBoxContainer/jian" to="." method="_on_jian_pressed"]
[connection signal="pressed" from="VBoxContainer/shou" to="." method="_on_shou_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
